Fix image heights and stretch

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -130,7 +130,7 @@ img {
 
 #content img {
   cursor: pointer;
-  height: 30vh;
+  max-height: 30vh;
   border-radius: 3px;
 }
 
